kubernetes/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lgrtool-ingress
  namespace: label-generation-ruleset
spec:
  tls:
  - secretName: lgr-certificate
  backend:
    serviceName: lgrtool-example-com
    servicePort: 443
